kubernetes/local-istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: alfred-gateway
  namespace: development-istio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alfred-vs 
  namespace: development-istio
spec:
  hosts:
  - "*"
  gateways:
  - alfred-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: alfred-api
        port:
          number: 9080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: alfred-frontend
        port:
          number: 9080
